--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -41,6 +41,7 @@
                         <div class="d-grid gap-2 d-md-block">
                             <a href="/" class="btn btn-primary btn-lg px-4">Atualizar Página</a>
                             <a href="/listar" class="btn btn-outline-secondary btn-lg px-4">Lista de chamados</a>
+                             <a href="/novo-chamado" class="btn btn-outline-secondary btn-lg px-4">Novo chamado</a>
                         </div>
                     </div>
                 </div>
