botão de logout

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,6 +13,33 @@
 
 <body>
     <div class="row g-0 min-vh-100">
+        <div>
+
+            {% if user.is_authenticated %}
+            <div class="my-3" style="display: flex;">
+                <span>
+                    Olá, <strong>{{ user.username }}</strong>
+                </span>
+                <form method="post" action="/admin/logout/">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">
+                        Logout
+                    </button>
+                </form>
+            </div>
+
+
+            {% else %}
+            <div class="my-3" style="display: flex;">
+                <span>
+                    Você não está logado
+                </span>
+                <a href="/admin/login" class="btn btn-primary">
+                    Login
+                </a>
+            </div>
+            {% endif %}
+        </div>
 
         <!-- Sidebar -->
         <div class="col-12 col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
@@ -43,6 +70,7 @@
             </header>
         </div>
 
+    </div>
     </div>
 </body>
 
