--- a/core/templates/core/novo_chamado.html
+++ b/core/templates/core/novo_chamado.html
@@ -28,7 +28,14 @@
                     <option value="Alta">Alta</option>
                 </select>
             </div>
-
+            <div class="mb-3">
+                 <label class="form-label fw-bold">Categoria:</label>
+                <select name="categoria" class="form-select">
+                    {% for cat in categorias %}
+                    <option value="{{ cat.id }}">{{ cat.nome }}</option>
+                    {% endfor %}
+                </select>
+            </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-success btn-lg">Salvar Chamado</button>
             </div>
