--- a/core/templates/core/listar_chamados.html
+++ b/core/templates/core/listar_chamados.html
@@ -30,7 +30,10 @@
                     {% endif %}
                 </td>
                 <td>
-                    <a href="{% url 'fechar-chamado' chamado.id %}" class="btn btn-sm btn-outline-primary"
+                    <a href="{% url 'editar-chamado' chamado.id %}" class="btn btn-sm btn-outline-primary">
+                        Editar
+                    </a>
+                    <a href="{% url 'fechar-chamado' chamado.id %}" class="btn btn-sm btn-outline-danger"
                         onclick="return confirm('Tem certeza que deseja apagar?')">Excluir</a>
                 </td>
             </tr>
