--- a/core/templates/core/listar_categorias.html
+++ b/core/templates/core/listar_categorias.html
@@ -21,7 +21,10 @@
                 <td>{{ categoria.id }}</td>
                 <td>{{ categoria.nome }}</td>
                 <td>
-                    <a href="{% url 'excluir-categoria' categoria.id %}" class="btn btn-sm btn-outline-primary"
+                    <a href="{% url 'editar-categoria' categoria.id %}" class="btn btn-sm btn-outline-primary">
+                        Editar
+                    </a>
+                    <a href="{% url 'excluir-categoria' categoria.id %}" class="btn btn-sm btn-outline-danger"
                         onclick="return confirm('Tem certeza que deseja apagar?')">Excluir</a>
                 </td>
             </tr>
