--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,13 +13,13 @@
 
 <body>
     <div class="row g-0 min-vh-100">
-        <div>
+        <div class="page-header">
 
             {% if user.is_authenticated %}
             <div class="my-3" style="display: flex;">
-                <span>
+                <div class="me-3" style="align-content: center;">
                     Olá, <strong>{{ user.username }}</strong>
-                </span>
+                </div>
                 <form method="post" action="/admin/logout/">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">
@@ -27,13 +27,11 @@
                     </button>
                 </form>
             </div>
-
-
             {% else %}
             <div class="my-3" style="display: flex;">
-                <span>
+                <div class="me-3" style="align-content: center;">
                     Você não está logado
-                </span>
+                </div>
                 <a href="/admin/login" class="btn btn-primary">
                     Login
                 </a>
