--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -56,6 +56,17 @@
                     Seu sistema de HelpDesk agora tem uma interface moderna.
                 </p>
 
+<div class="container mt-3">
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+</div>
+
                 {% block content %}
                 <div>BEM-VINDO do bloco content</div>
                 {% endblock %}
